Produto controller, melhorias e teste unitário